styles/style.css
:root {
    color-scheme: light dark;
    --primary-color-dark: hsl(137, 41%, 31%);
    --primary-color-darker: hsl(141, 36%, 28%);
    --primary-color-light: hsl(137, 54%, 81%);
    --secondary-color-lm: hsl(40, 100%, 80%);
    --secondary-color-dm: hsl(42, 100%, 30%, .5);
    --success-message-color: hsl(146, 58%, 83%);
    --heart-color: hsl(354, 100%, 59%);
    --border-radius-cards: 28px;
    --border-radius-panels: 0 0 28px 28px;
    --border-radius-imgs: 28px 28px 0 0;
    --background-color-dm: hsl(228, 7%, 14%);
    --border-radius-heart-button: 20px;
    --cards-box-shadow-lm: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    --cards-box-shadow-dm: rgb(151, 151, 151) 0px 1px 12px;
    --body-bg-color-lm: hsl(0, 0%, 98%);
    --body-bg-color-dm: hsl(0, 0%, 7%);
    --text-lm: hsl(0, 0%, 0%);
    --text-dm: hsl(0, 0%, 100%);
}

@font-face {
    font-family: StackSansHeadline;
    src: url(/fonts/StackSansHeadline-Regular.ttf);
    font-style: normal;
    letter-spacing: 2px;
}

@font-face {
    font-family: DMSans;
    src: url(/fonts/DMSans-Regular.ttf);
    font-style: normal;
}

@font-face {
    font-family: DMSans;
    src: url(/fonts/DMSans-Bold.ttf);
    font-weight: bold;
}

@font-face {
    font-family: Valentina;
    src: url(/fonts/Hello\ Valentina.ttf);
    font-weight: bold;
}

* {
    box-sizing: border-box;
}

body {
    background-color: light-dark(var(--body-bg-color-lm), var(--body-bg-color-dm));
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-family: StackSansHeadline, sans-serif;
    font-size: 1.5em;
    line-height: 1.4;
    letter-spacing: 2px;
}

h1 {
    font-size: 3rem;
    display: flex;
}

h2 {
    font-size: 2em;
    text-align: center;
    padding: .3em;
}

p, a {
    font-family: DMSans, serif;
    font-size: 1.5em;
    line-height: 1.4;
}

p {
    color: light-dark(var(--text-lm), var(--text-dm));
}

a {
    color: light-dark(var(--primary-color-darker), var(--primary-color-light));
    text-decoration: none;
    cursor: pointer;
}

header {
  display: flex;
  justify-content: space-between;
}

hr {
  width: 100%;
  height: 25px;
  background-color: light-dark(var(--primary-color-dark), hsl(137, 41%, 21%));
  border: 1px solid light-dark(var(--primary-color-dark), hsl(137, 41%, 21%));
}

/* hamburger menu style */
.hamburger-menu {
  background-color: rgb(241, 241, 241);
  height: 100vh;
  width: 100%;
  max-width: 300px;
  position: fixed;
  top: 0;
  left: -300px;
  z-index: 1;
  display: flex;
  justify-content: center;
  justify-items: center;
  transition: 0.3s ease;

  @media screen and (min-width: 1300px) {
    display: none;
  }
}

.close-btn {
  width: 30px;
  height: 30px;
  font-size: 1.5rem;
  translate: 820% 30%;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.hamburger-menu.is-open {
  left: 0;
}

.hamburger-icon {
  background-color: transparent;
  border: none;
  font-size: 2.5rem;
  display: flex;
  margin-top: 70%;
  cursor: pointer;

  @media screen and (min-width: 1300px) {
    display: hidden;
  }
}

.search-icon {
  background-color: transparent;
  border: none;
  font-size: 2.5rem;
  display: flex;
  margin-top: 70%;
  font-weight: 100;
}

.nav {
  list-style: none;
}

.nav li {
  margin-bottom: 1.8em;
  translate: -10%;
}

.nav li:last-child {
  margin-bottom: 0;
}

.nav li a {
  color: black;
}

.nav li a:hover {
  color: var(--primary-color-dark);
  transition: opacity 0.5s ease-in-out;
}

.nav li a:active {
  background-color: rgb(190, 190, 190);
}

.logo {
  width: 100%;
  height: auto;
  max-width: 500px;
}

/* MAIN GEDEELTE */
.cards-section {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(6, 1fr);
    gap: 3em;
    margin: 3em;

    @media screen and (min-width: 878px) {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(3, 1fr);
    }

    @media screen and (min-width: 1758px) {
        grid-template-columns: repeat(3, 1fr);
        grid-template-rows: repeat(2, 1fr);
    }
}

.card {
    display: flex;
    flex-direction: column;
    position: relative;
    background-color: white;
    border-radius: var(--border-radius-cards);
    box-shadow: var(--cards-box-shadow-lm);

    p:nth-of-type(1) {
    background-color: light-dark(var(--secondary-color-lm), var(--secondary-color-dm));
    font-size: 1.3em;
    padding: .5em .7em;
    border-radius: var(--border-radius-cards);
    width: fit-content;
    }

    @media (prefers-color-scheme: dark) {
        box-shadow: var(--cards-box-shadow-dm);
    }
}

.main {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, 1fr);
    gap: 3em;
    margin: 3em;
    max-width: 100vw;

    @media screen and (min-width: 878px) {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: 1fr;
    }

    article {
        place-items: center;
        text-align: center;
        /* padding: 1.5em; */
        box-shadow: var(--cards-box-shadow-lm);
        border-radius: var(--border-radius-cards);
        background: linear-gradient(
        to bottom,
        #F0FFF6 0%,
        #F2FFF7 20%,
        #F4FFF9 40%,
        #F6FFFA 55%,
        #F9FFFC 70%,
        #FBFFFE 95%,
        #FBFBFB 100%
    );

    @media (prefers-color-scheme: dark) {
        box-shadow: var(--cards-box-shadow-dm);
    }

    .calli {
        display: inline;
        font-family: Valentina, sans-serif;
        font-size: 1.5em;
        background: #00D23C;
        background: linear-gradient(to right in oklch, #00D23C 0%, #F1B940 50%, #FF0000 100%);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
    }

    img {
      max-width: 100%;
    }

    @media (prefers-color-scheme: dark) {
        background: var(--background-color-dm);
    }

        a {
            display: block;
            background-color: light-dark(var(--primary-color-dark), hsl(137, 41%, 21%));
            color: white;
            border-radius: 28px;
            padding: .5em 1em;
            width: max-content;
            /* margin inline auto zorgt voor centreren van a-tag binnen de card */
            margin-inline: auto;
        }

        a:hover {
            background-color: light-dark(hsl(137, 45%, 40%), hsl(137, 41%, 27%));
        }

        div:nth-of-type(2) {
            padding: 2em;
        }
    }
}

.h2-divider {
    h2 {
        margin: 0;
    }

    .h2-events {
        color: light-dark(#1D1D1F, #FCFCFF);
    }
}

#h2-divider-child {
    display: inline;
    font-family: DMSans, sans-serif;
    font-size: 1.5em;
    background: #00D23C;
    background: linear-gradient(to right in oklch, #00D23C 0%, #F1B940 50%, #FF0000 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.bigger-heading {
    font-size: 3em;
}

img {
    max-width: 100%;
    height: 20em;
    object-fit: cover;
    border-radius: var(--border-radius-imgs);
}

.panel {
    padding: 0 1.5em 1.5em;
    background-color: light-dark(white, var(--background-color-dm));
    border-radius: var(--border-radius-panels);
}

.heart-button {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    background-color: light-dark(white, var(--background-color-dm));
    border-style: none;
    cursor: pointer;
    font-size: 50px;
    border-radius: var(--border-radius-heart-button);
    top: .5em;
    right: .5em;
    width: 70px;
    height: 70px;
}

.heart-button:hover {
    border: 5px solid var(--heart-color);
}

@keyframes --like-animation {
    0% {
        transform: scale(1);
    }
    25% {
        transform: scale(1.10);
    }
    50% {
        transform: scale(1.25);
    }
    75% {
        transform: scale(1.10);
    }
    100% {
        transform: scale(1);
    }
}

.heart-button.liked {
    background-color: light-dark(white, var(--background-color-dm));

    svg {
        color: var(--heart-color);
        fill: var(--heart-color);
        animation-name: --like-animation;
        animation-duration: .3s;
        animation-iteration-count: 1;
        animation-timing-function: ease-in;
    }
}

.success-message {
    display: none;
    background-color: var(--success-message-color);
    position: sticky;
    bottom: 1em;
    padding: 1em;
    border-radius: var(--border-radius-cards);
    z-index: 10;

    button {
        background-color: transparent;
        border-style: none;
    }

    .success-message-close-button {
        position: absolute;
        cursor: pointer;
        top: .5em;
        right: 1.2em;
        font-size: 20px;
        font-size: 1.7em;
    }
}

.success-message-visible {
    display: flex;
}

.arrow {
    display: inline-block;
    transition: transform 0.3s ease;
}

a:hover {
    .arrow {
        transform: translateX(5px);
    }
}

.info-section {
    text-align: center;
    display: flex;
    flex-direction: column;
    padding: 3em;
    gap: 1em;

    background: linear-gradient(
        to bottom,
        #F0FFF6 0%,
        #F2FFF7 20%,
        #F4FFF9 40%,
        #F6FFFA 55%,
        #F9FFFC 70%,
        #FBFFFE 95%,
        #FBFBFB 100%
    );

    @media (prefers-color-scheme: dark) {
        background: var(--background-color-dm);
    }
}

.info-section article {

    transition:1s;

    &.hidden {
        opacity:0;
        translate:0 2em;
    }
}

#p-align {
    text-align: left;
}

footer {
  background-color: light-dark(var(--primary-color-dark), hsl(137, 41%, 21%));
  padding-top: 1px;
  padding-bottom: 20px;

  h2 {
    color: white;
    text-align: center;
  }
}

/* animatie voor de slide van school logo's */
/* per 10% een transform zodat alle 10 img's zichtbaar worden bij de slide */
@keyframes slide {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-50%);
  }
}

.school-logos {
  overflow: hidden;
}

/* foto's naast elkaar zetten + animatie van keyframes hierboven */
.school-logos-slide {
  white-space: nowrap;
  animation: 33s slide infinite linear;

  img {
    height: 50px;
  }
}

.contact {
  text-align: center;
  place-content: center;
  gap: 2em;
  color: white;

  p {
    font-weight: 200;
    color: white;
  }

  @media screen and (min-width: 768px) {
    display: flex;
    flex-direction: row;
    margin: 1em;
  }
}

.contact-1 p {
  margin-top: -20px;
}

.contact-2 p {
  margin-top: -20px;
  margin-bottom: 0;
  max-width: 100vw;
}

